Port to KStatusNotifierItem

Using SNI instead of QSystemTrayIcon allows to pass icon names and pixmaps
for the main icon and overlay in combination. Make use of that functionality
to support themes better.

BUG: 481917
BUG: 481918